--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
   	<div id="control">
-  		<button id="add-nurli">add nurli</button>
-  		<button id="remove-nurli">remove nurli</button>
+  		<button id="add-nurli">Add Nurli</button>
+  		<button id="remove-nurli">Remove Nurli</button>
   	</div>
     <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
